--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     background-color: beige;
-    height: 200%;
+    height: 140%;
 }
 
 .Label {
@@ -17,4 +17,10 @@ img {
 table {
     display: flex;
     justify-content: center; /* Centers horizontally */
+}
+
+@media screen and (max-width: 2000px) {
+    html {
+        height: 180%;
+    }
 }
